--- a/documents/Nextjs 2025/Nextjs New/04.md
+++ b/documents/Nextjs 2025/Nextjs New/04.md
@@ -171,6 +171,163 @@ export default function SettingsPage() {
 4. **Chuyển trang không reload layout cha.**
 5. **Các file page.tsx chỉ là phần nội dung — layout mới là phần khung.**
 
+---
+
+Hệ thống App Router có **rất nhiều hàm và API đặc trưng**, giúp xử lý:
+📦 *rendering, routing, data fetching, metadata, error handling,* và *navigation*.
+
+---
+
+### 🧭 Tổng hợp **Toàn bộ hàm và API có sẵn** trong **Next.js App Router** trước khi chúng ta bắt đầu
+
+Mình chia ra 8 nhóm chính để bạn dễ tra cứu và học theo từng chủ đề.
+
+---
+
+## **1️⃣ — Routing Helpers (Client & Server)**
+
+Các hàm điều hướng (navigate, params, pathname, …)
+
+| Hàm                 | Môi trường   | Mô tả                                                                                     |
+| ------------------- | ------------ | ----------------------------------------------------------------------------------------- |
+| `useRouter()`       | ✅ **Client** | Trả về đối tượng `router` với các method: `push()`, `replace()`, `back()`, `refresh()`, … |
+| `usePathname()`     | ✅ **Client** | Lấy đường dẫn hiện tại (ví dụ: `/blog/react`)                                             |
+| `useSearchParams()` | ✅ **Client** | Lấy và xử lý query params: `?page=2&sort=asc`                                             |
+| `redirect()`        | ✅ **Server** | Chuyển hướng trong **server component** (trả về HTTP 307)                                 |
+| `notFound()`        | ✅ **Server** | Gọi trang `not-found.tsx` tương ứng với route hiện tại                                    |
+| `Link` (component)  | ✅ **Client** | Dùng để điều hướng client-side không reload trang                                         |
+
+---
+
+## **2️⃣ — Data Fetching & Caching Helpers**
+
+| Hàm                                  | Môi trường          | Mô tả                                                                               |
+| ------------------------------------ | ------------------- | ----------------------------------------------------------------------------------- |
+| `fetch()` (được mở rộng bởi Next.js) | ✅ **Server**        | Next.js tự động cache & revalidate theo cấu hình                                    |
+| `revalidatePath(path)`               | ✅ **Server Action** | Làm mới (revalidate) cache của route cụ thể                                         |
+| `revalidateTag(tag)`                 | ✅ **Server Action** | Revalidate dữ liệu được gắn tag khi fetch (`fetch(url, { next: { tags: [...] } })`) |
+| `unstable_noStore()`                 | ✅ **Server**        | Tắt cache cho route hiện tại                                                        |
+| `cache(fn)`                          | ✅ **Server**        | Cache kết quả của một hàm server-side                                               |
+| `headers()`                          | ✅ **Server**        | Lấy toàn bộ request headers                                                         |
+| `cookies()`                          | ✅ **Server**        | Lấy và ghi cookie trong server component hoặc server action                         |
+
+---
+
+## **3️⃣ — File-based Rendering APIs**
+
+Các hàm đặt trong file `page.tsx`, `layout.tsx`, `error.tsx`, ...
+
+| Hàm                                  | Môi trường           | File sử dụng             | Mô tả                                            |
+| ------------------------------------ | -------------------- | ------------------------ | ------------------------------------------------ |
+| `generateStaticParams()`             | **Server**           | `[slug]/page.tsx`        | Khai báo các param để pre-render SSG             |
+| `generateMetadata()`                 | **Server**           | `page.tsx`, `layout.tsx` | Sinh metadata động (SEO) theo param hoặc dữ liệu |
+| `default export function Page()`     | **Server (default)** | `page.tsx`               | Render nội dung trang                            |
+| `default export function Layout()`   | **Server**           | `layout.tsx`             | Định nghĩa layout bao quanh các route con        |
+| `default export function Error()`    | **Client bắt buộc**  | `error.tsx`              | Xử lý lỗi runtime trong layout hoặc route        |
+| `default export function Loading()`  | **Server**           | `loading.tsx`            | Hiển thị trạng thái khi đang fetch dữ liệu       |
+| `default export function NotFound()` | **Server**           | `not-found.tsx`          | Hiển thị trang 404 riêng cho route               |
+
+---
+
+## **4️⃣ — Metadata API (SEO & Social)**
+
+Khai báo SEO cho từng route/layout.
+
+| API                                        | File                     | Dạng            | Mô tả                                                     |
+| ------------------------------------------ | ------------------------ | --------------- | --------------------------------------------------------- |
+| `export const metadata = {...}`            | `page.tsx`, `layout.tsx` | Static          | Metadata tĩnh (title, description, openGraph, twitter, …) |
+| `export async function generateMetadata()` | `page.tsx`               | Dynamic         | Metadata động dựa theo param hoặc fetch dữ liệu           |
+| `Metadata` Type                            | `next`                   | TypeScript type | Định nghĩa chuẩn cho metadata object                      |
+
+Ví dụ:
+
+```tsx
+export const metadata = {
+  title: "Trang chủ | MyApp",
+  description: "Trang giới thiệu sản phẩm",
+  openGraph: {
+    title: "MyApp OG",
+    images: ["/og-image.png"],
+  },
+};
+```
+
+---
+
+## **5️⃣ — Server Actions (Từ Next.js 13.4+)**
+
+| Hàm / Cấu trúc                   | Môi trường    | Mô tả                                                                    |
+| -------------------------------- | ------------- | ------------------------------------------------------------------------ |
+| `"use server"`                   | Server        | Đánh dấu 1 hàm là **server action** có thể gọi từ client form hoặc event |
+| `export async function action()` | Server        | Xử lý logic server-side, ví dụ: form submission                          |
+| `revalidatePath()`               | Server Action | Làm mới cache của route sau khi cập nhật dữ liệu                         |
+| `revalidateTag()`                | Server Action | Làm mới các fetch theo tag                                               |
+| `redirect()` / `notFound()`      | Server Action | Có thể gọi trực tiếp sau khi xử lý form                                  |
+
+Ví dụ:
+
+```tsx
+"use server";
+
+import { revalidatePath } from "next/cache";
+
+export async function addPost(data: FormData) {
+  const title = data.get("title");
+  await saveToDB(title);
+  revalidatePath("/blog");
+}
+```
+
+---
+
+## **6️⃣ — Navigation Components (Client)**
+
+| Thành phần              | Mô tả                                          |
+| ----------------------- | ---------------------------------------------- |
+| `<Link href="/path">`   | Điều hướng client-side (không reload)          |
+| `<Redirect>` (React 19) | Dùng trong client component                    |
+| `<Suspense>`            | Bao quanh component async để show `loading` UI |
+| `<ErrorBoundary>`       | Bao quanh vùng có thể lỗi                      |
+
+---
+
+## **7️⃣ — Special File Conventions (Hành vi tự động của App Router)**
+
+| File                      | Tác dụng                          |
+| ------------------------- | --------------------------------- |
+| `page.tsx`                | Nội dung chính của route          |
+| `layout.tsx`              | Layout bao quanh các route con    |
+| `loading.tsx`             | UI khi đang loading               |
+| `error.tsx`               | UI khi gặp lỗi                    |
+| `not-found.tsx`           | UI cho lỗi 404                    |
+| `route.ts`                | API Route (tương tự `/api/...`)   |
+| `template.tsx`            | Layout reset lại khi chuyển route |
+| `head.tsx` *(deprecated)* | Cũ, thay bằng `metadata`          |
+
+---
+
+## **8️⃣ — Others (Utility & Context)**
+
+| Hàm                           | Môi trường | Mô tả                                                                      |
+| ----------------------------- | ---------- | -------------------------------------------------------------------------- |
+| `useServerInsertedHTML()`     | Server     | Chèn HTML tùy chỉnh trong quá trình render                                 |
+| `useSelectedLayoutSegments()` | Client     | Lấy các segment hiện tại trong URL (App Router)                            |
+| `useParams()` *(Next 15)*     | Client     | Lấy trực tiếp params trong Client Component (thay cho `useRouter().query`) |
+
+---
+
+## 🧩 **Tổng hợp ngắn gọn cho dev nhớ nhanh**
+
+| Nhóm                  | Hàm / File chính                                                                  |
+| --------------------- | --------------------------------------------------------------------------------- |
+| **Routing**           | `useRouter`, `redirect`, `notFound`                                               |
+| **Params & Query**    | `useParams`, `useSearchParams`, `usePathname`                                     |
+| **Static Generation** | `generateStaticParams`                                                            |
+| **SEO**               | `generateMetadata`, `metadata`                                                    |
+| **UI States**         | `loading.tsx`, `error.tsx`, `not-found.tsx`                                       |
+| **Server Actions**    | `"use server"`, `revalidatePath`, `redirect`                                      |
+| **Cache Control**     | `fetch(..., { next: { revalidate, tags } })`, `revalidateTag`, `unstable_noStore` |
+| **API Route**         | `route.ts`                                                                        |
 
 
 ---
