--- a/documents/Nextjs 2025/Nextjs New/10.md
+++ b/documents/Nextjs 2025/Nextjs New/10.md
@@ -144,5 +144,288 @@ Thứ tự ưu tiên của Next.js khi render `not-found`:
 > * Thêm `not-found.tsx` riêng cho `/blog` hiển thị “Bài viết không tồn tại”.
 
 ---
+Dưới đây là hướng dẫn bài tập — tạo cấu trúc `/blog/[slug]` trong **Next.js App Router** kèm xử lý `notFound()` và trang `not-found.tsx` riêng cho `/blog`.
+
+---
+
+## 🧩 **Mục tiêu**
+
+* Dùng **Dynamic Route** `/blog/[slug]`
+* Kiểm tra slug hợp lệ trong danh sách giả lập
+* Nếu **không hợp lệ → gọi `notFound()`**
+* Tạo file `app/blog/not-found.tsx` để hiển thị thông báo riêng cho Blog
+
+---
+
+## 📂 **Cấu trúc thư mục**
+
+```
+app/
+ ├─ layout.tsx
+ ├─ page.tsx
+ └─ blog/
+     ├─ [slug]/
+     │   └─ page.tsx
+     └─ not-found.tsx
+```
+
+---
+
+## 📘 **Bước 1. Tạo danh sách bài viết giả lập**
+
+File: `app/blog/[slug]/page.tsx`
+
+```tsx
+import { notFound } from "next/navigation";
+
+const fakePosts = ["nextjs", "react", "tailwind"];
+
+interface BlogPageProps {
+  params: { slug: string };
+}
+
+export default function BlogPage({ params }: BlogPageProps) {
+  const { slug } = params;
+
+  // ✅ Kiểm tra xem slug có hợp lệ không
+  if (!fakePosts.includes(slug)) {
+    notFound(); // Gọi trang not-found riêng
+  }
+
+  return (
+    <main className="p-6">
+      <h1 className="text-2xl font-bold capitalize">{slug} bài viết</h1>
+      <p className="mt-2 text-gray-700">
+        Đây là nội dung mô phỏng cho bài viết <strong>{slug}</strong>.
+      </p>
+    </main>
+  );
+}
+```
+
+---
+
+## 📘 **Bước 2. Tạo trang not-found riêng cho Blog**
+
+File: `app/blog/not-found.tsx`
+
+```tsx
+export default function BlogNotFound() {
+  return (
+    <main className="flex flex-col items-center justify-center min-h-screen text-center">
+      <h1 className="text-3xl font-bold mb-4 text-red-500">
+        Bài viết không tồn tại 🫤
+      </h1>
+      <p className="text-gray-600">
+        Có vẻ như đường dẫn bạn nhập không đúng hoặc bài viết đã bị xóa.
+      </p>
+    </main>
+  );
+}
+```
+
+---
+
+## ✅ **Kết quả mong đợi**
+
+| Truy cập         | Kết quả                                    |
+| ---------------- | ------------------------------------------ |
+| `/blog/nextjs`   | Hiển thị nội dung bài viết                 |
+| `/blog/react`    | Hiển thị nội dung bài viết                 |
+| `/blog/tailwind` | Hiển thị nội dung bài viết                 |
+| `/blog/unknown`  | Hiển thị trang `Bài viết không tồn tại 🫤` |
+
+---
+
+## 💡 **Gợi ý nâng cao**
+
+* Có thể thay danh sách giả lập bằng **fetch API / database** sau này.
+* Có thể tạo thêm file `generateStaticParams()` để pre-render 3 bài viết hợp lệ.
+
+Ví dụ:
+
+```tsx
+export async function generateStaticParams() {
+  return fakePosts.map((slug) => ({ slug }));
+}
+```
+
+Giờ ta sẽ **nâng cấp module `/blog` hoàn chỉnh** với đầy đủ các tính năng Next.js App Router **mức production**:
+✅ Dynamic Route
+✅ Static Generation (`generateStaticParams`)
+✅ Loading state (`loading.tsx`)
+✅ Not-found riêng
+✅ Demo fetch API giả lập
+✅ Metadata động (`generateMetadata`)
+
+---
+
+## 📂 **Cấu trúc thư mục đầy đủ**
+
+```
+app/
+ ├─ layout.tsx
+ ├─ page.tsx
+ └─ blog/
+     ├─ [slug]/
+     │   ├─ page.tsx
+     │   └─ loading.tsx
+     ├─ not-found.tsx
+     └─ data.ts
+```
+
+---
+
+## 🧱 **Bước 1. Tạo data giả lập**
+
+📄 `app/blog/data.ts`
+
+```ts
+export const fakePosts = [
+  {
+    slug: "nextjs",
+    title: "Làm chủ Next.js App Router",
+    content: "App Router giúp ta xây dựng ứng dụng nhanh và linh hoạt hơn...",
+  },
+  {
+    slug: "react",
+    title: "Hiểu sâu React Rendering",
+    content: "React Rendering là cốt lõi của hiệu năng trong UI hiện đại...",
+  },
+  {
+    slug: "tailwind",
+    title: "Thiết kế đẹp nhanh với Tailwind CSS",
+    content: "Tailwind giúp bạn viết CSS theo component, tốc độ và linh hoạt.",
+  },
+];
+```
+
+---
+
+## 🧭 **Bước 2. Tạo Dynamic Page `/blog/[slug]/page.tsx`**
+
+📄 `app/blog/[slug]/page.tsx`
+
+```tsx
+import { notFound } from "next/navigation";
+import { fakePosts } from "../data";
+
+interface BlogPageProps {
+  params: { slug: string };
+}
+
+// ✅ Generate Static Params
+export async function generateStaticParams() {
+  return fakePosts.map((post) => ({ slug: post.slug }));
+}
+
+// ✅ Generate Metadata (SEO) — Học ở bài sau
+export async function generateMetadata({ params }: BlogPageProps) {
+  const post = fakePosts.find((p) => p.slug === params.slug);
+  if (!post) {
+    return {
+      title: "Bài viết không tồn tại | Blog",
+      description: "Không tìm thấy bài viết này.",
+    };
+  }
+
+  return {
+    title: `${post.title} | Blog`,
+    description: post.content.slice(0, 100),
+  };
+}
+
+// ✅ Page Component
+export default async function BlogPage({ params }: BlogPageProps) {
+  const { slug } = params;
+  const post = fakePosts.find((p) => p.slug === slug);
+
+  // Nếu không có slug -> 404
+  if (!post) notFound();
+
+  // Giả lập fetch chậm
+  await new Promise((r) => setTimeout(r, 1200));
+
+  return (
+    <article className="prose mx-auto p-8">
+      <h1 className="text-3xl font-bold">{post.title}</h1>
+      <p className="text-gray-700 mt-4">{post.content}</p>
+    </article>
+  );
+}
+```
+
+---
+
+## 🕐 **Bước 3. Loading UI khi fetch**
+
+📄 `app/blog/[slug]/loading.tsx`
+
+```tsx
+export default function BlogLoading() {
+  return (
+    <div className="flex items-center justify-center min-h-[50vh]">
+      <div className="animate-pulse text-gray-500">
+        Đang tải bài viết...
+      </div>
+    </div>
+  );
+}
+```
+
+---
+
+## 🚫 **Bước 4. Trang not-found riêng**
+
+📄 `app/blog/not-found.tsx`
+
+```tsx
+export default function BlogNotFound() {
+  return (
+    <main className="flex flex-col items-center justify-center min-h-[50vh] text-center">
+      <h1 className="text-3xl font-bold mb-3 text-red-500">
+        Bài viết không tồn tại 🫤
+      </h1>
+      <p className="text-gray-600">
+        Có thể bài viết đã bị xóa hoặc đường dẫn không đúng.
+      </p>
+    </main>
+  );
+}
+```
+
+---
+
+## ⚙️ **Cách hoạt động**
+
+| Tình huống       | Kết quả                                                    |
+| ---------------- | ---------------------------------------------------------- |
+| `/blog/nextjs`   | Hiển thị nội dung bài viết Next.js                         |
+| `/blog/react`    | Hiển thị nội dung bài viết React                           |
+| `/blog/tailwind` | Hiển thị nội dung bài viết Tailwind                        |
+| `/blog/unknown`  | Gọi `notFound()` → Hiển thị trang “Bài viết không tồn tại” |
+| Khi fetch chậm   | Hiển thị `loading.tsx` trong lúc chờ                       |
+
+---
+
+## 🧠 **Hiểu sâu hơn**
+
+| Thành phần               | Chức năng                                                                      |
+| ------------------------ | ------------------------------------------------------------------------------ |
+| `generateStaticParams()` | Giúp Next.js build sẵn 3 trang `/blog/nextjs`, `/blog/react`, `/blog/tailwind` |
+| `generateMetadata()`     | Tạo tiêu đề SEO riêng cho từng bài                                             |
+| `loading.tsx`            | Render trong khi `page.tsx` đang fetch dữ liệu                                 |
+| `not-found.tsx`          | Trang lỗi 404 riêng cho nhánh `/blog`                                          |
+
+---
+
+## 💡 **Bài tập nâng cao**
+
+1. Thêm `/blog/page.tsx` hiển thị danh sách bài viết.
+2. Chuyển `fakePosts` thành fetch API từ JSON placeholder.
+3. Dùng **Suspense + ErrorBoundary** để quản lý lỗi network.
+4. Áp dụng **revalidate** và **cache: "force-cache"** cho dữ liệu thật.
+
+---
 
 [<< BÀI 09](./09.md) | [BÀI 11 >>](./11.md)
