--- a/documents/Nextjs 2025/Nextjs New/13.md
+++ b/documents/Nextjs 2025/Nextjs New/13.md
@@ -202,6 +202,164 @@ Hãy:
 3. `/dashboard` và `/settings` dùng layout Dashboard.
 4. `/login` dùng layout Auth.
 5. Kiểm tra URL → đảm bảo **không chứa `(dashboard)` hoặc `(auth)`**.
+Hoàn hảo 👌 Bài tập này giúp bạn làm quen với **“Route Groups”** trong **Next.js App Router**, dùng để tổ chức cấu trúc thư mục logic mà **không ảnh hưởng đến URL**.
+
+---
+
+## 📂 **Cấu trúc thư mục cần tạo**
+
+```
+app/
+ ├─ (dashboard)/
+ │   ├─ layout.tsx         ← Layout dành cho Dashboard
+ │   ├─ dashboard/
+ │   │   └─ page.tsx
+ │   └─ settings/
+ │       └─ page.tsx
+ │
+ └─ (auth)/
+     ├─ layout.tsx         ← Layout dành cho Auth
+     └─ login/
+         └─ page.tsx
+```
+
+> 🧠 **Lưu ý:** Tên thư mục có dấu ngoặc `()` sẽ **bị loại khỏi URL**, chỉ để tổ chức logic.
+
+---
+
+## 🧱 **Bước 1. Tạo layout cho nhóm Dashboard**
+
+📄 `app/(dashboard)/layout.tsx`
+
+```tsx
+import Link from "next/link";
+
+export default function DashboardLayout({
+  children,
+}: {
+  children: React.ReactNode;
+}) {
+  return (
+    <div className="min-h-screen flex">
+      <aside className="w-64 bg-gray-800 text-white p-4 space-y-4">
+        <h2 className="text-xl font-bold">Dashboard Layout</h2>
+        <nav className="flex flex-col gap-2">
+          <Link href="/dashboard">🏠 Dashboard</Link>
+          <Link href="/settings">⚙️ Settings</Link>
+        </nav>
+      </aside>
+
+      <main className="flex-1 p-6 bg-gray-100">{children}</main>
+    </div>
+  );
+}
+```
+
+---
+
+## 🧱 **Bước 2. Tạo layout cho nhóm Auth**
+
+📄 `app/(auth)/layout.tsx`
+
+```tsx
+export default function AuthLayout({
+  children,
+}: {
+  children: React.ReactNode;
+}) {
+  return (
+    <div className="min-h-screen flex items-center justify-center bg-gray-100">
+      <div className="bg-white shadow-lg p-8 rounded-lg w-[400px] text-center">
+        <h1 className="text-2xl font-bold mb-4 text-blue-600">Auth Layout</h1>
+        {children}
+      </div>
+    </div>
+  );
+}
+```
+
+---
+
+## 🧱 **Bước 3. Tạo các trang con**
+
+### 📄 `app/(dashboard)/dashboard/page.tsx`
+
+```tsx
+export default function DashboardPage() {
+  return <h1 className="text-2xl font-bold">📊 Dashboard Page</h1>;
+}
+```
+
+### 📄 `app/(dashboard)/settings/page.tsx`
+
+```tsx
+export default function SettingsPage() {
+  return <h1 className="text-2xl font-bold">⚙️ Settings Page</h1>;
+}
+```
+
+### 📄 `app/(auth)/login/page.tsx`
+
+```tsx
+export default function LoginPage() {
+  return (
+    <>
+      <h1 className="text-xl font-bold mb-4">🔐 Login Page</h1>
+      <form className="flex flex-col gap-3">
+        <input
+          className="border px-3 py-2 rounded"
+          placeholder="Email"
+          type="email"
+        />
+        <input
+          className="border px-3 py-2 rounded"
+          placeholder="Password"
+          type="password"
+        />
+        <button className="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+          Login
+        </button>
+      </form>
+    </>
+  );
+}
+```
+
+---
+
+## ✅ **Kết quả khi chạy**
+
+| URL truy cập | Layout được dùng                       | Ghi chú              |
+| ------------ | -------------------------------------- | -------------------- |
+| `/dashboard` | DashboardLayout                        | ✅ Có sidebar         |
+| `/settings`  | DashboardLayout                        | ✅ Dùng chung sidebar |
+| `/login`     | AuthLayout                             | ✅ Form login riêng   |
+| URL hiển thị | Không chứa `(dashboard)` hoặc `(auth)` | ✅ Chuẩn yêu cầu      |
+
+---
+
+## 💡 **Hiểu sâu**
+
+* `(dashboard)` và `(auth)` là **Route Groups**, không ảnh hưởng tới URL.
+* Mục đích: chia module (như admin, auth, marketing) mà không làm rối cấu trúc đường dẫn.
+* Layout trong nhóm **chỉ áp dụng** cho các route con nằm trong cùng nhóm.
+
+---
+
+## 🧩 **Mở rộng thêm**
+
+Nếu muốn `/dashboard/settings` **nằm dưới cùng 1 namespace**, bạn có thể đặt trong thư mục `dashboard/settings/page.tsx`, vẫn trong nhóm `(dashboard)`:
+
+```
+app/
+ ├─ (dashboard)/
+ │   ├─ layout.tsx
+ │   └─ dashboard/
+ │       ├─ page.tsx
+ │       └─ settings/
+ │           └─ page.tsx
+```
+
 
 
 ---
