--- a/documents/Nextjs 2025/Nextjs New/23.md
+++ b/documents/Nextjs 2025/Nextjs New/23.md
@@ -85,4 +85,142 @@ export default function BlogPage({ params }: BlogPageProps) {
 
 ---
 
+# ⚔️ **So sánh chi tiết: `layout.tsx` vs `template.tsx`**
+
+| Tiêu chí                            | `layout.tsx`                                                                       | `template.tsx`                                                                       |
+| ----------------------------------- | ---------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------ |
+| 🧱 **Chức năng chính**              | Là *Persistent Layout* — giữ nguyên giữa các lần điều hướng trong cùng nhánh route | Là *Isolated Layout* — render lại hoàn toàn mỗi khi route thay đổi                   |
+| ♻️ **Cơ chế render**                | Reuse (không bị unmount khi chuyển route con)                                      | Recreate (bị unmount và mount lại mỗi lần chuyển route con)                          |
+| ⚙️ **State trong layout**           | Giữ nguyên khi điều hướng giữa các route con                                       | Mất toàn bộ, reset lại mỗi lần chuyển route                                          |
+| 💨 **Hiệu năng**                    | Nhanh hơn (vì chỉ thay đổi `children`)                                             | Chậm hơn (vì toàn bộ component render lại)                                           |
+| 🔄 **Khi nào chạy lại `useEffect`** | Chỉ khi layout bị unmount (ví dụ đổi nhóm layout)                                  | Mỗi lần đổi route con, `useEffect` chạy lại                                          |
+| 🧭 **Khi nào dùng**                 | Khi bạn muốn **giữ UI cố định** (sidebar, navbar, global state)                    | Khi bạn muốn **reset toàn bộ UI** (wizard form, animation intro, transition độc lập) |
+| 📄 **Vị trí file**                  | `app/(group)/layout.tsx`                                                           | `app/(group)/template.tsx`                                                           |
+| 🧩 **Thay thế nhau được không?**    | Có thể, nhưng hành vi khác (layout không reset state)                              | Có thể, nhưng template sẽ reset state mỗi lần route thay đổi                         |
+| 🚫 **Bị giới hạn**                  | Không thể dùng để reset animation mỗi page                                         | Không thể giữ state lâu dài giữa các trang con                                       |
+
+---
+
+## 🎨 **Ví dụ minh họa:**
+
+Giả sử cấu trúc:
+
+```
+app/
+ ├─ (dashboard)/
+ │   ├─ layout.tsx
+ │   ├─ dashboard/page.tsx
+ │   └─ settings/page.tsx
+ └─ (auth)/
+     ├─ template.tsx
+     ├─ login/page.tsx
+     └─ register/page.tsx
+```
+
+---
+
+### 🔹 `layout.tsx` (Dashboard — Persistent)
+
+```tsx
+"use client";
+import { useState } from "react";
+
+export default function DashboardLayout({ children }: { children: React.ReactNode }) {
+  const [count, setCount] = useState(0);
+
+  return (
+    <div className="flex">
+      <aside className="w-64 bg-gray-800 text-white p-4">
+        <p>Dashboard Layout</p>
+        <button onClick={() => setCount(count + 1)}>Count: {count}</button>
+      </aside>
+      <main className="flex-1 p-4">{children}</main>
+    </div>
+  );
+}
+```
+
+➡️ Khi bạn chuyển giữa `/dashboard` ↔ `/settings`:
+
+* `DashboardLayout` **không bị render lại**
+* Biến `count` **giữ nguyên giá trị**
+
+---
+
+### 🔸 `template.tsx` (Auth — Isolated)
+
+```tsx
+"use client";
+import { useState } from "react";
+
+export default function AuthTemplate({ children }: { children: React.ReactNode }) {
+  const [count, setCount] = useState(0);
+
+  return (
+    <div className="min-h-screen flex flex-col items-center justify-center">
+      <p>Auth Template</p>
+      <button onClick={() => setCount(count + 1)}>Count: {count}</button>
+      <div className="mt-4">{children}</div>
+    </div>
+  );
+}
+```
+
+➡️ Khi bạn chuyển `/login` ↔ `/register`:
+
+* `AuthTemplate` **bị unmount và mount lại**
+* Biến `count` **reset về 0**
+
+---
+
+## 🧠 **Hiểu sâu cơ chế**
+
+| Khái niệm                 | Layout                                      | Template                                            |
+| ------------------------- | ------------------------------------------- | --------------------------------------------------- |
+| **Rendering model**       | Persistent React tree                       | Recreated React tree                                |
+| **Transition**            | Giữ nguyên layout → chỉ render lại children | Xóa toàn bộ DOM → render lại từ đầu                 |
+| **useEffect** / **state** | Persist                                     | Reset                                               |
+| **Performance**           | Tốt hơn                                     | Tốn hơn                                             |
+| **UX phù hợp cho**        | App có sidebar, dashboard, header           | Page riêng biệt: login, animation intro, onboarding |
+
+---
+
+## 💬 **Tóm tắt dễ nhớ**
+
+> 🧩 **layout.tsx** = “Khung xương cố định”
+> Dùng cho UI lâu dài (Navbar, Sidebar, Theme, Auth wrapper, ...)
+
+> 🎞️ **template.tsx** = “Trang mới hoàn toàn”
+> Dùng khi bạn muốn mỗi trang **reset lại mọi thứ** (form, animation, transition page).
+
+---
+
+## 💡 Ví dụ thực tế
+
+| Tình huống                                        | Nên dùng          |
+| ------------------------------------------------- | ----------------- |
+| Dashboard có sidebar, giữ lại khi đổi trang       | `layout.tsx`      |
+| Login → Register, cần reset form & animation      | `template.tsx`    |
+| Onboarding từng bước, cần reset hiệu ứng mỗi bước | `template.tsx`    |
+| Global layout (header, footer) cho toàn site      | Root `layout.tsx` |
+
+---
+
+## ⚙️ Pro Tip:
+
+Bạn **có thể kết hợp cả 2 cùng lúc**:
+
+```
+app/
+ ├─ layout.tsx        ← Root layout (global header/footer)
+ └─ (auth)/
+     ├─ template.tsx  ← Reset mỗi lần đổi trang
+     └─ login/page.tsx
+```
+
+👉 Kết quả:
+RootLayout vẫn bao ngoài, nhưng template bên trong vẫn reset mỗi lần `/login` ↔ `/register`.
+
+---
+
 [<< BÀI 22](./22.md) | [BÀI 24 >>](./24.md)
