--- a/documents/Nextjs 2025/Nextjs New/24.md
+++ b/documents/Nextjs 2025/Nextjs New/24.md
@@ -68,4 +68,346 @@ app/
 
 
 ---
+
+### ⚡️ `loading.tsx` trong Next.js App Router
+
+
+`loading.tsx` là **file đặc biệt** trong Next.js, được dùng để **hiển thị trạng thái tải (loading state)** khi **các segment con** hoặc **dữ liệu đang fetch** trong route đó **chưa sẵn sàng**.
+
+Nó hoạt động dựa trên **React Suspense** — nghĩa là bất cứ khi nào component con bị “chờ dữ liệu”, Next.js sẽ **tạm render `loading.tsx`** cho đến khi phần đó tải xong.
+
+---
+
+## 📁 **2. Cấu trúc thư mục**
+
+Giả sử có cấu trúc App Router:
+
+```
+app/
+ ├─ layout.tsx
+ ├─ dashboard/
+ │   ├─ page.tsx
+ │   ├─ loading.tsx
+ │   ├─ settings/
+ │   │   ├─ page.tsx
+ │   │   └─ loading.tsx
+```
+
+👉 Khi bạn truy cập `/dashboard` hoặc `/dashboard/settings`, Next.js sẽ **tự động hiển thị `loading.tsx`** tương ứng khi dữ liệu chưa load xong.
+
+---
+
+## ⚙️ **3. Cách hoạt động**
+
+| Hành vi           | Mô tả                                                                 |
+| ----------------- | --------------------------------------------------------------------- |
+| Tự động kích hoạt | Khi route đang load (server component, data fetching, dynamic import) |
+| Cơ chế            | Dựa trên `React.Suspense`                                             |
+| Tự động dừng      | Khi dữ liệu hoặc component render hoàn tất                            |
+| Phạm vi           | Áp dụng cho **segment hiện tại và con của nó**                        |
+| Không cần import  | Chỉ cần có file `loading.tsx` là Next.js tự hiểu                      |
+
+---
+
+## 🧠 **4. Ví dụ thực tế**
+
+### 📄 `/app/dashboard/page.tsx`
+
+```tsx
+export default async function DashboardPage() {
+  const data = await fetch("https://jsonplaceholder.typicode.com/posts/1");
+  const post = await data.json();
+
+  await new Promise((resolve) => setTimeout(resolve, 2000)); // Giả lập delay
+
+  return (
+    <div>
+      <h1>Dashboard</h1>
+      <p>{post.title}</p>
+    </div>
+  );
+}
+```
+
+### ⚙️ `/app/dashboard/loading.tsx`
+
+```tsx
+export default function Loading() {
+  return (
+    <div className="flex justify-center items-center h-screen text-gray-600">
+      <p>⏳ Đang tải dữ liệu Dashboard...</p>
+    </div>
+  );
+}
+```
+
+### 🔁 Khi chạy:
+
+* Lúc đầu → Next.js render `loading.tsx`
+* Sau 2 giây → thay bằng nội dung trong `page.tsx`
+
+---
+
+## 🧩 **5. Cách kết hợp nhiều cấp (nested loading)**
+
+Bạn có thể đặt nhiều `loading.tsx` trong nhiều folder:
+
+```
+app/
+ ├─ loading.tsx               → loading chung cho toàn site
+ ├─ dashboard/
+ │   ├─ loading.tsx           → loading riêng cho dashboard
+ │   ├─ settings/
+ │   │   ├─ loading.tsx       → loading riêng cho settings
+```
+
+Khi `/dashboard/settings` đang load:
+
+* Nếu `settings/loading.tsx` tồn tại → render cái này
+* Nếu không → render `dashboard/loading.tsx`
+* Nếu vẫn không → render `app/loading.tsx`
+
+✅ Ưu tiên theo cấp gần nhất (closest segment).
+
+---
+
+## 🧭 **6. Ứng dụng thực tế**
+
+| Tình huống                             | Cách dùng                                |
+| -------------------------------------- | ---------------------------------------- |
+| Trang dashboard tải dữ liệu lớn        | `dashboard/loading.tsx`                  |
+| Component con có dynamic import (lazy) | Next.js tự Suspense render `loading.tsx` |
+| Toàn site cần fallback khi đổi route   | `app/loading.tsx`                        |
+| Mỗi nhóm route có UI loading khác nhau | Tạo `loading.tsx` riêng trong từng group |
+
+---
+
+## 🎨 **7. Mẫu code UI đẹp**
+
+```tsx
+export default function Loading() {
+  return (
+    <div className="flex flex-col justify-center items-center h-screen bg-gray-50">
+      <div className="animate-spin rounded-full h-12 w-12 border-4 border-blue-500 border-t-transparent"></div>
+      <p className="mt-4 text-gray-600">Đang tải dữ liệu, vui lòng chờ...</p>
+    </div>
+  );
+}
+```
+
+> 👉 Có thể thay spinner bằng `next/image`, `skeleton`, hoặc `framer-motion` animation.
+
+---
+
+## 🧩 **8. Tips nâng cao**
+
+| Tip                                | Mô tả                                                                                         |
+| ---------------------------------- | --------------------------------------------------------------------------------------------- |
+| 💡 Đặt ở đúng cấp route            | Nếu bạn chỉ muốn loading cho `/blog`, đặt trong `/app/blog/loading.tsx`                       |
+| ⚙️ Tự custom duration              | Có thể thêm fake delay để UX mượt hơn                                                         |
+| 🔄 Dùng chung layout               | Layout **vẫn render** trong khi `loading.tsx` hiển thị (loading chỉ thay phần `children`)     |
+| ⛔ Không dùng hook                  | `loading.tsx` là **Server Component** (mặc định), không được dùng hook client như `useEffect` |
+| 🧠 Muốn dùng animation client-side | Thêm `"use client"` ở đầu file `loading.tsx`                                                  |
+
+---
+
+## 🧩 **9. Demo tree (render logic)**
+
+```
+Root Layout
+ ├── Navbar
+ ├── <Suspense fallback={<loading.tsx>}>
+ │     └── Page content (fetching)
+ └── Footer
+```
+
+→ Khi page chưa sẵn sàng, Next.js tự fallback sang `loading.tsx`.
+
+---
+
+## ✅ **Tóm lại**
+
+| Mục đích                        | File                        | Ghi chú           |
+| ------------------------------- | --------------------------- | ----------------- |
+| Loading state khi fetch dữ liệu | `loading.tsx`               | Tự động triggered |
+| Giữ layout cố định khi loading  | Có — layout không re-render |                   |
+| Cấp độ áp dụng                  | Mỗi route hoặc toàn app     |                   |
+| Dùng cho animation / skeleton   | Rất phù hợp                 |                   |
+
+---
+
+
+
+1️⃣ Trường hợp **`loading.tsx` tự động hoạt động** (không cần Suspense thủ công)
+
+
+2️⃣ Trường hợp **tự dùng `<Suspense>` để kiểm soát phạm vi loading nhỏ hơn**
+
+---
+
+## 🧩 **1️⃣ Cách xài cơ bản – KHÔNG cần Suspense**
+
+> ✅ Đây là cách phổ biến nhất — Next.js tự Suspense hóa page cho bạn.
+
+### 📁 Cấu trúc:
+
+```
+app/
+ ├─ layout.tsx
+ ├─ dashboard/
+ │   ├─ page.tsx
+ │   └─ loading.tsx
+```
+
+### 📄 `app/dashboard/page.tsx`
+
+```tsx
+// Đây là 1 Server Component
+export default async function DashboardPage() {
+  // Giả lập gọi API chậm
+  const res = await fetch("https://jsonplaceholder.typicode.com/posts/1", {
+    cache: "no-store",
+  });
+
+  const data = await res.json();
+  await new Promise((r) => setTimeout(r, 2000)); // delay 2s
+
+  return (
+    <div className="p-6">
+      <h1 className="text-2xl font-bold mb-2">Dashboard Page</h1>
+      <p className="text-gray-700">{data.title}</p>
+    </div>
+  );
+}
+```
+
+### ⚙️ `app/dashboard/loading.tsx`
+
+```tsx
+export default function Loading() {
+  return (
+    <div className="flex flex-col items-center justify-center h-60">
+      <div className="animate-spin rounded-full h-10 w-10 border-4 border-blue-500 border-t-transparent"></div>
+      <p className="mt-3 text-gray-500">Đang tải dữ liệu Dashboard...</p>
+    </div>
+  );
+}
+```
+
+> 👉 Khi bạn truy cập `/dashboard`,
+> Next.js sẽ tự động hiển thị `loading.tsx` trong lúc `page.tsx` đang fetch dữ liệu.
+> **Không cần Suspense thủ công.**
+
+---
+
+## 🧩 **2️⃣ Khi bạn muốn chủ động dùng `<Suspense>`**
+
+> Dùng khi bạn chỉ muốn loading **một phần nhỏ** trong trang (VD: sidebar, bảng dữ liệu,...)
+
+### 📁 Cấu trúc:
+
+```
+app/
+ ├─ dashboard/
+ │   ├─ page.tsx
+ │   └─ UserList.tsx
+```
+
+### 📄 `app/dashboard/UserList.tsx`
+
+```tsx
+export default async function UserList() {
+  const res = await fetch("https://jsonplaceholder.typicode.com/users", {
+    cache: "no-store",
+  });
+  const users = await res.json();
+
+  await new Promise((r) => setTimeout(r, 1500)); // giả lập chậm
+
+  return (
+    <ul className="mt-2 space-y-1">
+      {users.map((u: any) => (
+        <li key={u.id} className="border-b py-1">
+          {u.name}
+        </li>
+      ))}
+    </ul>
+  );
+}
+```
+
+### ⚙️ `app/dashboard/page.tsx`
+
+```tsx
+import { Suspense } from "react";
+import UserList from "./UserList";
+
+export default function DashboardPage() {
+  return (
+    <div className="p-6">
+      <h1 className="text-2xl font-bold">User Dashboard</h1>
+
+      <Suspense fallback={<p className="text-gray-500 mt-4">Đang tải danh sách người dùng...</p>}>
+        <UserList />
+      </Suspense>
+    </div>
+  );
+}
+```
+
+### 🔍 Cách hiểu:
+
+* Cả trang `/dashboard` load ngay lập tức.
+* Chỉ phần `<UserList />` bị “delay” → trong thời gian chờ, fallback được hiển thị.
+* Không ảnh hưởng tới layout hay header.
+
+> 🔥 Dùng kiểu này cực hữu ích trong dashboard lớn, để page render nhanh còn data load dần.
+
+---
+
+## 🧠 **So sánh 2 cách**
+
+| Tiêu chí                | `loading.tsx` (tự động)                 | `<Suspense>` (thủ công)          |
+| ----------------------- | --------------------------------------- | -------------------------------- |
+| Phạm vi loading         | Toàn bộ segment route                   | Chỉ một phần cụ thể              |
+| Cấu hình                | File `loading.tsx`                      | JSX `<Suspense fallback={...}>`  |
+| Khi trigger             | Khi page/server component đang chờ data | Khi component con đang chờ data  |
+| Layout có render không? | ✅ Có — layout render trước              | ✅ Có                             |
+| Dùng khi nào            | Mỗi route riêng                         | Nhiều phần async trong cùng page |
+| Có thể kết hợp?         | ✅ Hoàn toàn có thể                      | ✅ Hoàn toàn có thể               |
+
+---
+
+## 🧩 **3️⃣ Kết hợp cả 2 — Best Practice**
+
+> Khi bạn có trang vừa fetch tổng thể, vừa fetch từng phần nhỏ.
+
+### Ví dụ:
+
+```
+app/
+ ├─ dashboard/
+ │   ├─ page.tsx
+ │   ├─ loading.tsx
+ │   ├─ Summary.tsx
+ │   └─ ActivityFeed.tsx
+```
+
+* `loading.tsx`: fallback khi **toàn bộ trang** đang tải.
+* `<Suspense>`: fallback khi **một phần trong trang** (VD: `ActivityFeed`) đang fetch thêm.
+
+---
+
+## ✅ **Tóm tắt dễ nhớ**
+
+| Mục đích                                   | Dùng gì                                                                                  |
+| ------------------------------------------ | ---------------------------------------------------------------------------------------- |
+| Hiển thị khi **toàn page** đang load       | `loading.tsx`                                                                            |
+| Hiển thị khi **1 component con** đang load | `<Suspense fallback={...}>`                                                              |
+| Kết hợp tốt nhất                           | Dùng `loading.tsx` cho route chính, và `<Suspense>` cho phần nội dung chi tiết bên trong |
+
+
+
+
+---
 [<< BÀI 23](./23.md) | [BÀI 25 >>](./25.md)
