--- a/documents/Nextjs 2025/Nextjs New/25.md
+++ b/documents/Nextjs 2025/Nextjs New/25.md
@@ -81,4 +81,386 @@ app/
 
 
 ---
+
+# 🚨 Mở Rộng: Error Handling 
+
+## 🧭 Tổng Quan
+
+Trong **App Router**, Next.js triển khai **Error Boundaries** ở **mức route segment** — nghĩa là mỗi thư mục trong `app/` có thể tự định nghĩa cách xử lý lỗi riêng mà không làm crash toàn bộ ứng dụng.
+
+Điều này rất mạnh vì bạn có thể:
+
+* Cô lập lỗi ở từng khu vực (ví dụ: `dashboard`, `auth`, `profile`).
+* Cung cấp trải nghiệm người dùng mượt mà hơn (render fallback UI thay vì màn hình trắng).
+* Ghi log lỗi riêng cho từng phần.
+
+---
+
+## ⚙️ 1️⃣ Cấu trúc chuẩn
+
+```tsx
+app/
+├── layout.tsx
+├── error.tsx        // error boundary toàn cục
+├── dashboard/
+│   ├── layout.tsx
+│   ├── error.tsx    // error boundary riêng cho dashboard
+│   └── page.tsx
+└── auth/
+    ├── layout.tsx
+    ├── error.tsx    // error boundary riêng cho auth
+    └── login/page.tsx
+```
+
+---
+
+## 🧱 2️⃣ `error.tsx` hoạt động ra sao
+
+Khi component hoặc page con của route đó **throw error (runtime hoặc render error)**, Next.js sẽ:
+
+1. **Dừng render cây component con**.
+2. **Unmount** tất cả component con (nếu có).
+3. **Render `error.tsx`** của segment gần nhất (local boundary).
+4. Nếu không có, fallback dần lên **layout cha**, **rồi root error.tsx**.
+
+---
+
+## 🧩 3️⃣ Ví dụ chuyên sâu
+
+```tsx
+// app/dashboard/error.tsx
+"use client";
+import { useEffect } from "react";
+
+export default function DashboardError({
+  error,
+  reset,
+}: {
+  error: Error;
+  reset: () => void;
+}) {
+  useEffect(() => {
+    console.error("🚨 Dashboard Error:", error);
+    // Ví dụ: gửi log lên Sentry hoặc backend
+    // Sentry.captureException(error);
+  }, [error]);
+
+  return (
+    <div className="p-8 text-red-600">
+      <h2>⚠️ Dashboard Crashed!</h2>
+      <p>{error.message}</p>
+      <button
+        onClick={() => reset()}
+        className="mt-4 px-4 py-2 bg-blue-500 text-white rounded"
+      >
+        Try again
+      </button>
+    </div>
+  );
+}
+```
+
+🧠 **Giải thích:**
+
+* `error`: là instance của `Error` mà component con ném ra.
+* `reset()`: dùng để “thử render lại” sau khi user thực hiện thao tác (ví dụ click “Try again”).
+* `error.tsx` phải là **Client Component** (`"use client"`) vì nó dùng hook.
+* Không cần bọc bằng `try/catch` ở component con — Next.js tự xử lý.
+
+---
+
+## 🔁 4️⃣ Kết hợp với `loading.tsx` và `not-found.tsx`
+
+* `loading.tsx`: dùng khi đang chờ dữ liệu (Suspense fallback).
+* `error.tsx`: dùng khi có lỗi xảy ra trong quá trình render hoặc data fetching.
+* `not-found.tsx`: dùng khi router không tìm thấy page phù hợp.
+
+🧩 Ví dụ kết hợp ba file:
+
+```
+app/
+├── dashboard/
+│   ├── loading.tsx
+│   ├── error.tsx
+│   ├── not-found.tsx
+│   └── page.tsx
+```
+
+Luồng hoạt động:
+
+1. Khi page đang load → render `loading.tsx`.
+2. Nếu data invalid hoặc fetch thất bại → render `error.tsx`.
+3. Nếu không có dữ liệu hoặc URL sai → render `not-found.tsx`.
+
+---
+
+## 🧰 5️⃣ Error trong Server Components
+
+Next.js tự động **bọc Server Components trong error boundary cha gần nhất**.
+Tuy nhiên, **không thể dùng hook (useEffect, useState)** trong `error.tsx` server — vì file đó phải là **Client Component** nếu bạn muốn dùng logic.
+
+Nếu bạn muốn log lỗi ở server-side:
+
+```tsx
+// app/error.tsx
+"use client";
+export default function GlobalError({ error }: { error: Error }) {
+  console.error("SSR Error logged:", error);
+  return <h2>Global Error: {error.message}</h2>;
+}
+```
+
+Và thêm logging thật trong **middleware**, **server actions** hoặc **API routes**.
+
+---
+
+## 🧠 6️⃣ Best Practices (Production-Ready)
+
+✅ Tạo error.tsx riêng cho từng vùng quan trọng (auth, dashboard, product…).
+✅ Ghi log lỗi về backend/Sentry thay vì console.log.
+✅ Cho phép user **retry hoặc quay lại trang chủ**.
+✅ Kết hợp **error.tsx** + **loading.tsx** + **not-found.tsx** cho UX liền mạch.
+✅ Dùng `reset()` để refresh state nhẹ (không reload toàn trang).
+✅ Dùng **root error.tsx** làm fallback cuối cùng (UI nhẹ, không cầu kỳ).
+
+---
+
+## 🧪 7️⃣ Bonus: Ví dụ lỗi thực tế
+
+```tsx
+// app/dashboard/page.tsx
+export default async function Page() {
+  const res = await fetch("https://api.fakeurl.io/data");
+  if (!res.ok) {
+    throw new Error("API failed: " + res.statusText);
+  }
+
+  const data = await res.json();
+  return <pre>{JSON.stringify(data, null, 2)}</pre>;
+}
+```
+
+➡️ Khi API lỗi → render tự động `app/dashboard/error.tsx`.
+
+---
+
+
+Dưới đây là phần **"Advanced Error Handling"** – dành cho bạn ở mức **Senior / Enterprise-level**, áp dụng cho các tình huống thực tế khi làm việc với **Server Actions, API Routes, Middleware và Logging Services (Sentry, Datadog, v.v.)**.
+
+---
+
+# ⚡️ Error Handling Nâng Cao Trong Next.js (App Router)
+
+## 🎯 Mục tiêu
+
+* Hiểu cách xử lý lỗi **ở mọi tầng** trong Next.js (client, server, API, middleware).
+* Biết cách **ghi log**, **phân loại lỗi**, **thông báo người dùng** đúng cách.
+* Thiết kế hệ thống **error boundary nhất quán** cho ứng dụng lớn (SaaS, dashboard, v.v.)
+
+---
+
+## 🧩 1️⃣ Phân loại lỗi trong App Router
+
+| Loại lỗi                | Xảy ra ở đâu                          | Cách handle                                |
+| ----------------------- | ------------------------------------- | ------------------------------------------ |
+| **Render Error**        | React Component (client/server)       | `error.tsx`                                |
+| **Data Fetching Error** | `fetch()`, `getData()`, Server Action | `try/catch` hoặc `error.tsx`               |
+| **Not Found**           | Route không khớp / data rỗng          | `not-found.tsx` hoặc `notFound()`          |
+| **Server Action Error** | Function chạy trong server            | `try/catch` hoặc propagate lên `error.tsx` |
+| **Middleware Error**    | `middleware.ts`                       | `try/catch` + `NextResponse.redirect()`    |
+| **API Route Error**     | `route.ts`                            | `try/catch` + trả JSON lỗi chuẩn hóa       |
+
+---
+
+## 🧱 2️⃣ Error trong **Server Action**
+
+Server Action chạy trên server (giống function trong API), nên phải dùng `try/catch` cục bộ — vì lỗi không thể bubble lên client tự động.
+
+```tsx
+// app/actions/createUser.ts
+"use server";
+
+import { revalidatePath } from "next/cache";
+
+export async function createUser(formData: FormData) {
+  try {
+    const email = formData.get("email");
+    if (!email) throw new Error("Missing email");
+
+    await db.user.create({ data: { email } });
+    revalidatePath("/dashboard");
+  } catch (error) {
+    console.error("❌ Server Action Error:", error);
+    throw new Error("Unable to create user"); // ném ra error.tsx ở layer tương ứng
+  }
+}
+```
+
+> 🧠 Mẹo: Khi muốn gửi thông báo lỗi UI thay vì crash, bạn có thể trả giá trị `return { error: "..." }` thay vì throw.
+
+---
+
+## 🧭 3️⃣ Error trong **route.ts (API Route)**
+
+Dạng API route trong App Router:
+
+```tsx
+// app/api/users/route.ts
+import { NextResponse } from "next/server";
+
+export async function GET() {
+  try {
+    const users = await db.user.findMany();
+    return NextResponse.json(users);
+  } catch (error) {
+    console.error("API Error:", error);
+    return NextResponse.json(
+      { message: "Internal Server Error" },
+      { status: 500 }
+    );
+  }
+}
+```
+
+> ✅ **Best practice:** Luôn trả lỗi JSON chuẩn, kèm status code rõ ràng (400/401/404/500).
+> ✅ Có thể log thêm `error.stack` nếu chạy trong môi trường development.
+
+---
+
+## 🧩 4️⃣ Error trong **middleware.ts**
+
+Middleware chạy ở edge, nên không có error boundary.
+Cách duy nhất là **try/catch thủ công** + redirect sang trang lỗi:
+
+```ts
+// middleware.ts
+import { NextResponse } from "next/server";
+
+export async function middleware(req) {
+  try {
+    const token = req.cookies.get("token");
+    if (!token) throw new Error("Unauthorized");
+
+    return NextResponse.next();
+  } catch (error) {
+    console.error("Middleware Error:", error);
+    return NextResponse.redirect(new URL("/error", req.url));
+  }
+}
+```
+
+---
+
+## 🧱 5️⃣ Error Logging và Monitoring (Production)
+
+Ở production, **console.log không đủ**.
+Bạn nên tích hợp 1 trong các service logging sau:
+
+| Service                      | Mục đích                                  | Ưu điểm                  |
+| ---------------------------- | ----------------------------------------- | ------------------------ |
+| 🧠 **Sentry**                | Ghi log lỗi runtime, theo dõi stack trace | Tích hợp sâu với Next.js |
+| 🔥 **Datadog**               | Giám sát hiệu năng + log lỗi              | Dành cho enterprise      |
+| 📈 **Logtail / BetterStack** | Gọn nhẹ, dễ setup                         | Phù hợp startup          |
+
+### Ví dụ tích hợp Sentry
+
+1️⃣ Cài:
+
+```bash
+npm install @sentry/nextjs
+npx sentry wizard -i nextjs
+```
+
+2️⃣ Ghi log trong error.tsx hoặc server action:
+
+```tsx
+import * as Sentry from "@sentry/nextjs";
+
+export function MyError({ error }: { error: Error }) {
+  useEffect(() => {
+    Sentry.captureException(error);
+  }, [error]);
+}
+```
+
+> Khi lỗi xảy ra, Sentry lưu **stack trace, user info, route** → dễ debug.
+
+---
+
+## 🧭 6️⃣ Global Error Boundary (root level)
+
+Tạo `app/error.tsx` như fallback toàn cục:
+
+```tsx
+// app/error.tsx
+"use client";
+
+export default function GlobalError({
+  error,
+  reset,
+}: {
+  error: Error;
+  reset: () => void;
+}) {
+  console.error("🔥 Global Error:", error);
+  return (
+    <html>
+      <body className="p-10 text-center">
+        <h1>😢 Something went wrong</h1>
+        <p>{error.message}</p>
+        <button onClick={() => reset()}>Reload App</button>
+      </body>
+    </html>
+  );
+}
+```
+
+> ⚠️ Lưu ý: `GlobalError` phải return cả `<html>` & `<body>` (vì nó render toàn app).
+
+---
+
+## 🧩 7️⃣ Error vs. Not Found vs. Redirect
+
+| Trường hợp          | Dùng gì                           | Ví dụ                    |
+| ------------------- | --------------------------------- | ------------------------ |
+| Dữ liệu không có    | `notFound()` hoặc `not-found.tsx` | `throw notFound()`       |
+| Lỗi logic / runtime | `error.tsx`                       | `throw new Error("...")` |
+| Không có quyền      | Redirect                          | `redirect("/login")`     |
+| API lỗi             | Trả JSON `{ error: "..." }`       |                          |
+
+---
+
+## 🧠 8️⃣ Pattern chuẩn (Enterprise UX)
+
+```tsx
+try {
+  const data = await getData();
+  if (!data) notFound();
+  return <UI data={data} />;
+} catch (err) {
+  console.error(err);
+  if (err instanceof AuthError) redirect("/login");
+  throw err; // fallback sang error.tsx
+}
+```
+
+> Mô hình này giúp tách rõ 3 tình huống:
+> 🔹 Dữ liệu rỗng → notFound
+> 🔹 Không quyền → redirect
+> 🔹 Lỗi bất ngờ → error.tsx
+
+---
+
+## 🚀 Kết luận
+
+| Kỹ thuật                              | Mục đích                    | Mức độ       |
+| ------------------------------------- | --------------------------- | ------------ |
+| `error.tsx`                           | Render UI khi component lỗi | 🔹 Cơ bản    |
+| `try/catch` trong server action / API | Bắt lỗi logic               | 🔸 Trung cấp |
+| `notFound()`, `redirect()`            | Xử lý flow UI hợp lý        | 🔸 Trung cấp |
+| Logging (Sentry, Datadog)             | Theo dõi lỗi production     | 🔸 Nâng cao  |
+| Global Error Boundary                 | Fallback toàn hệ thống      | 🔹 Nâng cao  |
+
+
+---
 [<< BÀI 24](./24.md) | [BÀI 26 >>](./26.md)
