--- a/documents/Nextjs 2025/Nextjs New/27.md
+++ b/documents/Nextjs 2025/Nextjs New/27.md
@@ -60,5 +60,184 @@ export default function NotFoundRedirect() {
 * Giữ trải nghiệm người dùng mượt mà khi URL sai.
 * Kết hợp với **middleware** để xử lý các route lỗi global.
 
+
+
+---
+
+
+
+## 🧩 **1️⃣ Cách 1 – Dùng `not-found.tsx`**
+
+Đây là **cách chính thức và “Next.js way”** để xử lý 404.
+
+### 📁 Cấu trúc ví dụ:
+
+```
+app/
+ ├─ layout.tsx
+ ├─ not-found.tsx        ← trang 404 chung toàn app
+ ├─ blog/
+ │   ├─ page.tsx
+ │   ├─ [slug]/
+ │   │   ├─ page.tsx
+ │   │   └─ not-found.tsx   ← trang 404 riêng cho /blog
+```
+
+### ⚙️ `app/blog/[slug]/page.tsx`
+
+```tsx
+import { notFound } from "next/navigation";
+
+const validSlugs = ["nextjs", "react", "tailwind"];
+
+export default function BlogPost({ params }: { params: { slug: string } }) {
+  const { slug } = params;
+
+  if (!validSlugs.includes(slug)) {
+    notFound(); // 🚨 Gọi hàm này để trigger 404 page
+  }
+
+  return (
+    <article className="p-6">
+      <h1 className="text-2xl font-bold">Bài viết: {slug}</h1>
+      <p>Nội dung của bài viết này...</p>
+    </article>
+  );
+}
+```
+
+### 🧱 `app/blog/[slug]/not-found.tsx`
+
+```tsx
+export default function BlogNotFound() {
+  return (
+    <div className="p-10 text-center">
+      <h1 className="text-3xl font-semibold text-red-600">Bài viết không tồn tại</h1>
+      <p className="text-gray-600 mt-2">Vui lòng kiểm tra lại đường dẫn của bạn.</p>
+    </div>
+  );
+}
+```
+
+> 👉 Khi `notFound()` được gọi, Next.js tự động render `not-found.tsx` trong cùng segment (nếu có).
+> Nếu **không có**, nó sẽ fallback sang `app/not-found.tsx` (global).
+
+---
+
+## 🧠 **2️⃣ Cách 2 – Dùng Catch-All Dynamic Route `[...slug]`**
+
+Nếu bạn muốn tự xử lý logic của những route không khớp,
+bạn có thể tạo file:
+
+```
+app/[...slug]/page.tsx
+```
+
+### 📄 Ví dụ:
+
+```tsx
+export default function CatchAllPage({ params }: { params: { slug?: string[] } }) {
+  const path = params.slug?.join("/") || "";
+
+  if (path.startsWith("admin")) {
+    // Có thể redirect
+    return <p>Redirecting to admin dashboard...</p>;
+  }
+
+  return (
+    <div className="flex flex-col items-center justify-center h-screen text-center">
+      <h1 className="text-3xl font-bold text-red-500">404 - Trang không tồn tại</h1>
+      <p className="text-gray-600 mt-2">Không tìm thấy nội dung cho đường dẫn: <b>{path}</b></p>
+    </div>
+  );
+}
+```
+
+> ✅ Ưu điểm: tự do, có thể thêm logic kiểm tra & redirect.
+> ❌ Nhược điểm: phải tự xử lý 404, không dùng được `notFound()` chuẩn framework.
+
+---
+
+## ⚡ **3️⃣ So sánh nhanh**
+
+| Tiêu chí        | `not-found.tsx`                               | `[...slug]` (Catch-all)                 |
+| --------------- | --------------------------------------------- | --------------------------------------- |
+| Cơ chế          | Dựa trên hàm `notFound()` của Next.js         | Dựa trên dynamic route thủ công         |
+| Tự động trigger | ✅ Khi gọi `notFound()` hoặc route không match | ❌ Không, bạn phải handle logic          |
+| Dễ bảo trì      | ✅ Rất dễ                                      | ⚠️ Có thể phức tạp nếu có nhiều pattern |
+| Dùng cho        | 404 chuẩn hoặc segment-specific               | Tùy chỉnh redirect / logic phức tạp     |
+| Redirect        | Dùng `redirect()`                             | Dùng `redirect()` hoặc custom logic     |
+
+---
+
+## 🧩 **4️⃣ Redirect khi route không hợp lệ**
+
+Bạn có thể kết hợp `notFound()` hoặc `redirect()`:
+
+### Ví dụ:
+
+```tsx
+import { notFound, redirect } from "next/navigation";
+
+export default function BlogPost({ params }: { params: { slug: string } }) {
+  if (params.slug === "secret") {
+    redirect("/login"); // chuyển hướng
+  }
+
+  if (params.slug === "unknown") {
+    notFound(); // hiển thị trang 404
+  }
+
+  return <p>Bài viết: {params.slug}</p>;
+}
+```
+
+---
+
+## 🧭 **5️⃣ Phạm vi của `not-found.tsx`**
+
+| File `not-found.tsx` đặt ở đâu   | Phạm vi áp dụng               |
+| -------------------------------- | ----------------------------- |
+| `/app/not-found.tsx`             | Toàn app                      |
+| `/app/blog/not-found.tsx`        | Chỉ áp dụng trong `/blog`     |
+| `/app/blog/[slug]/not-found.tsx` | Chỉ cho route `/blog/[slug]`  |
+| `/app/(auth)/not-found.tsx`      | Chỉ trong nhóm route `(auth)` |
+
+👉 **Next.js tìm từ trong ra ngoài** (nearest match).
+
+---
+
+## 🎨 **6️⃣ Gợi ý UI đẹp cho 404**
+
+```tsx
+export default function NotFound() {
+  return (
+    <div className="flex flex-col items-center justify-center h-screen bg-gray-50">
+      <h1 className="text-6xl font-bold text-red-500 mb-4">404</h1>
+      <p className="text-gray-600 text-lg mb-6">Trang bạn tìm không tồn tại 😢</p>
+      <a
+        href="/"
+        className="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
+      >
+        Quay lại trang chủ
+      </a>
+    </div>
+  );
+}
+```
+
+---
+
+## ✅ **Tóm tắt**
+
+| Mục tiêu                  | Cách dùng                            |
+| ------------------------- | ------------------------------------ |
+| 404 page cơ bản           | Tạo file `not-found.tsx`             |
+| 404 riêng từng module     | Đặt `not-found.tsx` trong thư mục đó |
+| Redirect khi không hợp lệ | Dùng `redirect("/path")`             |
+| Custom logic path         | Dùng `[...slug]`                     |
+| Ưu tiên render            | Segment gần nhất có `not-found.tsx`  |
+
+
 ---
 [<< BÀI 26](./26.md) | [BÀI 28 >>](./28.md)
