--- a/documents/Nextjs 2025/Nextjs New/29.md
+++ b/documents/Nextjs 2025/Nextjs New/29.md
@@ -1,59 +1,65 @@
-
-
-## 🧭 Intercepting Routes trong Next.js
+# 🧭 Intercepting Routes trong Next.js
 
 ### 🎯 Mục tiêu
 
-* Hiểu cách Next.js cho phép **route này chèn vào route khác mà không thay đổi URL gốc**.
-* Tạo các **modal, sidebar hoặc drawer** mà vẫn giữ route parent.
-* Giúp **tái sử dụng layout** mà không cần duplicate pages.
+* Hiểu cơ chế **Intercepting Routes** – cách một route có thể **“chen vào” route khác** mà không thay đổi URL gốc.
+* Biết cách dùng để tạo **modal, drawer, overlay, hoặc preview page** mượt mà.
+* Kết hợp với **Parallel Routes** để tái sử dụng layout và state hiệu quả.
 
 ---
 
-## 🧱 1️⃣ Cơ chế Intercepting Routes
+## 🧱 1️⃣ Cơ chế Intercepting Routes là gì?
 
-* Intercepting route thường dùng **`(group)`** và **`@modal` hoặc `@overlay`** để route phụ hiển thị trong route cha.
-* Cú pháp:
+Trong **App Router**, Next.js cho phép bạn **“chặn” (intercept)** việc render route gốc, để **hiển thị một UI khác tạm thời** (thường là modal hoặc panel), **nhưng không rời khỏi layout hiện tại**.
 
-```txt
+👉 Dùng cú pháp **`(.)`, `(..)`, `(...)`** trước folder route:
+
+| Cú pháp     | Ý nghĩa                        |
+| ----------- | ------------------------------ |
+| `(.)slug`   | Intercept **route ở cùng cấp** |
+| `(..)slug`  | Intercept **route ở cấp cha**  |
+| `(...)slug` | Intercept **route ở root app** |
+
+---
+
+## 🧩 2️⃣ Ví dụ cơ bản
+
+Cấu trúc:
+
+```
 app/
-├── dashboard/
+├── feed/
 │   ├── page.tsx
-│   ├── (modals)/
-│   │   └── new-user/
-│   │       └── page.tsx
+│   ├── photo/
+│   │   └── page.tsx
+│   ├── (.)photo/
+│   │   └── page.tsx
 ```
 
-* Khi bạn truy cập `/dashboard/(modals)/new-user`, Next.js sẽ **render modal trên layout dashboard** mà URL vẫn gọn gàng.
-
----
-
-## 🧩 2️⃣ Ví dụ tạo Modal
+* Khi user ở `/feed` và click 1 ảnh → modal hiển thị (`(.)photo/page.tsx`)
+* Khi user **refresh hoặc truy cập trực tiếp** `/feed/photo` → render full page (`photo/page.tsx`)
 
 ```tsx
-// app/dashboard/(modals)/new-user/page.tsx
+// app/feed/(.)photo/page.tsx
 "use client";
 import { useRouter } from "next/navigation";
 
-export default function NewUserModal() {
+export default function PhotoModal() {
   const router = useRouter();
 
   return (
     <div
       style={{
         position: "fixed",
-        top: 0,
-        left: 0,
-        right: 0,
-        bottom: 0,
+        inset: 0,
         background: "rgba(0,0,0,0.5)",
         display: "flex",
         justifyContent: "center",
         alignItems: "center",
       }}
     >
-      <div style={{ background: "#fff", padding: "2rem", borderRadius: 8 }}>
-        <h2>Thêm User Mới</h2>
+      <div style={{ background: "#fff", padding: 24, borderRadius: 8 }}>
+        <h3>Ảnh chi tiết</h3>
         <button onClick={() => router.back()}>Đóng</button>
       </div>
     </div>
@@ -61,16 +67,273 @@ export default function NewUserModal() {
 }
 ```
 
-* Layout cha (`dashboard/layout.tsx`) vẫn giữ nguyên, modal chỉ overlay lên.
+🔹 Nếu user click từ `/feed` → hiển thị modal trên layout Feed
+🔹 Nếu user load `/feed/photo` trực tiếp → render **full page** photo (không modal)
 
 ---
 
-## 💡 3️⃣ Lợi ích
+## 🧩 3️⃣ Kết hợp với Parallel Routes
 
-* **Không reload layout** khi mở modal hoặc sidebar.
-* URL rõ ràng, dễ quản lý state của modal.
-* Kết hợp với **Parallel Routes** để render nhiều layer UI đồng thời.
+Bạn có thể kết hợp **Intercepting Routes** với **Parallel Routes** để hiển thị **2 luồng UI đồng thời** (ví dụ: danh sách + modal).
 
+```
+app/
+├── @feed/
+│   └── page.tsx
+├── @modal/
+│   ├── default.tsx
+│   └── (.)photo/
+│       └── page.tsx
+├── layout.tsx
+```
+
+```tsx
+// app/layout.tsx
+export default function RootLayout({
+  feed,
+  modal,
+}: {
+  feed: React.ReactNode;
+  modal: React.ReactNode;
+}) {
+  return (
+    <div>
+      {feed}
+      {modal}
+    </div>
+  );
+}
+```
+
+* Khi modal được mở, chỉ phần `@modal` thay đổi, `@feed` giữ nguyên.
+* Tạo trải nghiệm **SPA-like** nhưng vẫn có **URL tách biệt** cho từng modal.
 
 ---
+
+## 💡 4️⃣ Lợi ích & Ứng dụng thực tế
+
+| Ứng dụng             | Mô tả                                                       |
+| -------------------- | ----------------------------------------------------------- |
+| 🪟 Modal Intercept   | Xem chi tiết bài viết / ảnh / user mà không rời trang chính |
+| 🧭 Drawer Navigation | Mở thanh sidebar chi tiết mà vẫn giữ nguyên URL parent      |
+| 🧩 Nested UI Overlay | Tạo nhiều lớp UI đồng thời mà không ảnh hưởng layout cha    |
+| ⚙️ Parallel State    | Dễ dàng duy trì state khi chuyển giữa các modal hoặc view   |
+
+---
+
+## ⚠️ 5️⃣ Lưu ý quan trọng
+
+* Intercepting routes **chỉ hoạt động trong App Router (Next.js 13+)**.
+* Các file intercept (`(.)`, `(..)`, `(...)`) **phải nằm trong cấu trúc song song hợp lệ**.
+* Không nên lạm dụng quá nhiều layer intercept → dễ gây rối route tree.
+* Dùng `router.back()` hoặc `router.push()` để đóng modal đúng cách.
+
+---
+
+## 🧭 6️⃣ Tổng kết
+
+| Khía cạnh                | Mô tả                                               |
+| ------------------------ | --------------------------------------------------- |
+| **Intercepting Route**   | Cho phép “chen” UI tạm thời vào route hiện tại      |
+| **Cú pháp đặc biệt**     | `(.)`, `(..)`, `(...)`                              |
+| **Kết hợp tốt nhất với** | Parallel Routes                                     |
+| **Tác dụng chính**       | Modal, Sidebar, Drawer, Preview Page                |
+| **Ưu điểm**              | UX mượt, không reload layout, state được giữ nguyên |
+
+---
+
+
+Dưới đây là **demo hoàn chỉnh** minh họa cách dùng **Intercepting Routes** trong Next.js App Router — giống như Instagram mở modal ảnh mà **vẫn giữ nguyên trang feed**, kèm cả **fallback full-page** khi user truy cập trực tiếp.
+
+---
+
+# 🚀 DEMO: Feed + Photo Modal (Intercepting Routes)
+
+## 🧱 Cấu trúc thư mục
+
+```
+app/
+├── layout.tsx
+├── page.tsx                → Trang chính (redirect /feed)
+├── feed/
+│   ├── page.tsx            → Danh sách ảnh (Feed)
+│   ├── photo/
+│   │   └── [id]/page.tsx   → Full page ảnh (khi vào trực tiếp)
+│   ├── (.)photo/
+│   │   └── [id]/page.tsx   → Modal ảnh (Intercepted route)
+└── globals.css
+```
+
+---
+
+## 🧩 1️⃣ `app/layout.tsx`
+
+```tsx
+export default function RootLayout({ children }: { children: React.ReactNode }) {
+  return (
+    <html lang="en">
+      <body style={{ fontFamily: "sans-serif", margin: 0 }}>
+        <header style={{ background: "#333", color: "#fff", padding: "1rem" }}>
+          <h2>📷 Photo Feed Demo</h2>
+        </header>
+        <main>{children}</main>
+      </body>
+    </html>
+  );
+}
+```
+
+---
+
+## 🧩 2️⃣ `app/page.tsx` — redirect về `/feed`
+
+```tsx
+import { redirect } from "next/navigation";
+
+export default function HomePage() {
+  redirect("/feed");
+}
+```
+
+---
+
+## 🧩 3️⃣ `app/feed/page.tsx` — danh sách ảnh
+
+```tsx
+"use client";
+import Link from "next/link";
+
+const photos = [
+  { id: 1, title: "Sunset in Bali", url: "/images/pic1.jpg" },
+  { id: 2, title: "Mountain View", url: "/images/pic2.jpg" },
+  { id: 3, title: "City Lights", url: "/images/pic3.jpg" },
+];
+
+export default function FeedPage() {
+  return (
+    <div style={{ padding: "1rem", display: "grid", gap: 16 }}>
+      <h3>Photo Feed</h3>
+      <div style={{ display: "flex", gap: 12 }}>
+        {photos.map((p) => (
+          <Link key={p.id} href={`/feed/photo/${p.id}`}>
+            <img
+              src={p.url}
+              alt={p.title}
+              width={150}
+              height={150}
+              style={{ borderRadius: 8, cursor: "pointer" }}
+            />
+          </Link>
+        ))}
+      </div>
+    </div>
+  );
+}
+```
+
+---
+
+## 🧩 4️⃣ `app/feed/photo/[id]/page.tsx` — full page (truy cập trực tiếp)
+
+```tsx
+export default function PhotoPage({ params }: { params: { id: string } }) {
+  return (
+    <div style={{ padding: "2rem", textAlign: "center" }}>
+      <h2>Ảnh #{params.id}</h2>
+      <img
+        src={`/images/pic${params.id}.jpg`}
+        alt={`Photo ${params.id}`}
+        style={{ width: "60%", borderRadius: 8 }}
+      />
+      <p>Đây là full page khi user load trực tiếp URL.</p>
+    </div>
+  );
+}
+```
+
+---
+
+## 🧩 5️⃣ `app/feed/(.)photo/[id]/page.tsx` — intercept route (modal)
+
+```tsx
+"use client";
+import { useRouter } from "next/navigation";
+
+export default function PhotoModal({ params }: { params: { id: string } }) {
+  const router = useRouter();
+
+  return (
+    <div
+      style={{
+        position: "fixed",
+        inset: 0,
+        background: "rgba(0,0,0,0.6)",
+        display: "flex",
+        justifyContent: "center",
+        alignItems: "center",
+        zIndex: 100,
+      }}
+      onClick={() => router.back()}
+    >
+      <div
+        style={{
+          background: "#fff",
+          padding: "1rem",
+          borderRadius: 8,
+          maxWidth: 500,
+          position: "relative",
+        }}
+        onClick={(e) => e.stopPropagation()}
+      >
+        <h3>Ảnh #{params.id}</h3>
+        <img
+          src={`/images/pic${params.id}.jpg`}
+          alt={`Photo ${params.id}`}
+          style={{ width: "100%", borderRadius: 8 }}
+        />
+        <button
+          style={{
+            position: "absolute",
+            top: 8,
+            right: 8,
+            background: "#333",
+            color: "#fff",
+            border: "none",
+            padding: "4px 8px",
+            cursor: "pointer",
+          }}
+          onClick={() => router.back()}
+        >
+          ✕
+        </button>
+      </div>
+    </div>
+  );
+}
+```
+
+---
+
+## 🧱 6️⃣ Thử nghiệm
+
+| Tình huống                   | Kết quả                                       |
+| ---------------------------- | --------------------------------------------- |
+| Click ảnh trong `/feed`      | Mở modal (Intercepting route `(.)photo/[id]`) |
+| Reload `/feed/photo/1`       | Render full page (`photo/[id]/page.tsx`)      |
+| Đóng modal → `router.back()` | Quay lại `/feed`, giữ nguyên state layout     |
+
+---
+
+## 💡 Tổng kết kiến thức
+
+| Cơ chế                          | Mục tiêu                                              |
+| ------------------------------- | ----------------------------------------------------- |
+| **Intercepting Routes (`(.)`)** | Cho phép route con render “chồng lên” layout hiện tại |
+| **Modal UX**                    | Duy trì layout cha, không reload                      |
+| **Fallback Full Page**          | Render riêng khi người dùng vào trực tiếp URL         |
+| **router.back()**               | Quay lại route trước, đóng modal                      |
+
+---
+
+
 [<< BÀI 28](./28.md) | [BÀI 30 >>](./30.md)
