--- a/documents/Nextjs 2025/Nextjs New/30.md
+++ b/documents/Nextjs 2025/Nextjs New/30.md
@@ -240,22 +240,45 @@ export default function QuickSettingsSidebar() {
 
 ---
 
-## 6️⃣ Hoạt động khi truy cập
+## 6️⃣ Cách hoạt động
 
-* `/dashboard` → render **Overview + Layout**
-* `/dashboard/analytics` → render **Analytics + Layout**
-* `/dashboard/(modals)/new-user` → **Modal overlay** + Layout **không reload**
-* `/dashboard/(sidebars)/quick-settings` → **Sidebar overlay** + Layout **không reload**
-* Có thể mở **modal và sidebar song song** mà không mất content chính
+| URL                                    | Kết quả                                                            |
+| -------------------------------------- | ------------------------------------------------------------------ |
+| `/dashboard`                           | Hiển thị layout + Overview                                         |
+| `/dashboard/analytics`                 | Layout giữ nguyên, chỉ đổi nội dung chính                          |
+| `/dashboard/(modals)/new-user`         | Hiển thị modal overlay, layout không reload                        |
+| `/dashboard/(sidebars)/quick-settings` | Sidebar mở thêm ở cạnh phải                                        |
+| Mở cả hai song song                    | Cả modal và sidebar cùng hiển thị, layout cha vẫn giữ nguyên state |
 
 ---
 
-## 💡 Lợi ích demo
+## 💡 Lợi ích
 
-* Tích hợp **Nested Layouts + Parallel Routes + Intercepting Routes**
-* Không cần props drilling, state của layout được giữ nguyên
-* URL gọn, modular, dễ maintain
-* Có thể mở nhiều “layer” UI mà không reload page
+| Ưu điểm             | Mô tả                                                   |
+| ------------------- | ------------------------------------------------------- |
+| 🧩 Modular UI       | Dễ chia component và route theo layer                   |
+| 🚀 Hiệu năng cao    | Không reload layout, giữ nguyên state                   |
+| 🪟 UX tốt           | Modal/Sidebar độc lập, điều hướng nhẹ nhàng             |
+| 🧱 Production-ready | Dễ scale UI phức tạp, ví dụ: dashboard, CMS, social app |
+
+---
+
+## 🧠 Gợi ý mở rộng
+
+* Dùng `@modal` và `@sidebar` làm **Parallel Slot** để tách render song song rõ ràng hơn.
+* Kết hợp `loading.tsx` cho UX mượt mà khi tải modal hoặc sidebar.
+* Gắn thêm **error.tsx** riêng cho từng vùng UI để cô lập lỗi.
+
+---
+
+## ⚙️ Tóm tắt cơ chế
+
+| Thành phần              | Nhiệm vụ                                         |
+| ----------------------- | ------------------------------------------------ |
+| **Parallel Routes**     | Cho phép render nhiều vùng UI song song          |
+| **Intercepting Routes** | Hiển thị UI overlay tạm thời trên route hiện tại |
+| **Kết hợp cả hai**      | Modal, Sidebar, Drawer cùng tồn tại độc lập      |
+| **router.back()**       | Quay về route trước, đóng overlay                |
 
 
 ---
